<resources>
    <string name="app_name">Improve Yourself</string>

    <string name="main_todays_goals">Today\'s\nGoals</string>
    <string name="main_tomorrows_goals">Tomorrow\'s Goals</string>
    <string name="main_goals_met">Goals Met:</string>
    <string name="main_current_goals">Today\'s goals</string>
    <string name="main_check_in_time_unset">Daily Check In Time</string>
    <string name="main_check_in_time_set">Daily Check In Time:</string>
    <string name="main_goal_set_time_unset">Daily Goal Set Time</string>
    <string name="main_goal_set_time_set">Daily Goal Set Time:</string>
    <string name="main_click_to_set">set time</string>
    <string name="main_check_in_description">Following up on goals is important to keeping up, set a daily time to check in on your goals from the day before</string>
    <string name="main_set_goals_description">Stay on track! Set a daily time to set goals for the following day</string>
    <string name="main_title">Goals</string>
    <string name="main_subtitle">Improve your life with small changes, one day at a time</string>
    <string name="dashboard_dialog_check_in_title">Set check in time</string>
    <string name="dashboard_dialog_set_goals_title">Set goal set time</string>
    <string name="main_text_cancel">turn off</string>
    <string name="notification_text_check_in">How did you do yesterday? Check in to go over your goals.</string>
    <string name="notification_title_check_in">Check in</string>
    <string name="notification_title_set_goals">Goal time</string>
    <string name="notification_text_set_goals">Now is as good a time as any, set your upcoming goals</string>
    <string name="main_subheader">Improve your life with small changes, one day at a time</string>
    <string name="goal_history_dialog_done">done</string>
    <string name="delete_goal_dialog_title">Delete goal</string>
    <string name="delete_goal_dialog_content">Are you sure you want to delete this? This action can not be undone.</string>
    <string name="delete_goal_dialog_cancel">Cancel</string>
    <string name="delete_goal_dialog_delete">Delete</string>
    <string name="basic_dash">-</string>
    <string name="main_theory_text">No matter what our lives are like, everybody has room for improvement. Whether you are struggling with depression/anxiety or if there is just some change you\'d like to see in your life, it\'s easy to postpone indefinitely what we need to do. Our goal is to push people to make small changes in their lives to improve and help their life go in the direction they want.  A goal should be simple enough that it is feasible to accomplish in a day without being discouraged, but big enough that it challenges you. We recommend setting two goals every day, one to push yourself to be more productive (or maybe just productive in a way you usually aren\'t), and one to do something extra for yourself. Take it as you will, feel free to set whatever fits your life to get you where you want to go.</string>
    <string name="main_theory_title">Our Theory</string>
</resources>
